[gd_scene load_steps=8 format=2]

[ext_resource path="res://mat/ui/logo.png" type="Texture" id=1]
[ext_resource path="res://scripts/engine/menuscript.gd" type="Script" id=2]
[ext_resource path="res://sound/engine/ui_hover.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/engine/ui_click.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/engine/settingsmenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/engine/addonsmenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/engine/newgamemenu.tscn" type="PackedScene" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -364.0
margin_top = 44.0
margin_right = 884.0
margin_bottom = 904.0
rect_rotation = -4.8
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 0.05
anchor_bottom = 0.5
script = ExtResource( 2 )

[node name="buttonHover" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="buttonClick" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource( 4 )

[node name="newgameButton" type="LinkButton" parent="VBoxContainer"]
pause_mode = 2
margin_right = 74.0
margin_bottom = 21.0
focus_mode = 2
shortcut_in_tooltip = false
text = "new game"
underline = 2

[node name="optionsButton" type="LinkButton" parent="VBoxContainer"]
pause_mode = 2
margin_top = 25.0
margin_right = 74.0
margin_bottom = 46.0
focus_mode = 2
shortcut_in_tooltip = false
text = "options"
underline = 2

[node name="addonsButton" type="LinkButton" parent="VBoxContainer"]
pause_mode = 2
margin_top = 50.0
margin_right = 74.0
margin_bottom = 71.0
focus_mode = 2
shortcut_in_tooltip = false
text = "addons"
underline = 2

[node name="exitButton" type="LinkButton" parent="VBoxContainer"]
pause_mode = 2
margin_top = 75.0
margin_right = 74.0
margin_bottom = 96.0
focus_mode = 2
shortcut_in_tooltip = false
text = "quit"
underline = 2

[node name="Settings" parent="." instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.2
margin_top = 354.0
margin_right = 150.2
margin_bottom = 355.0

[node name="Addons" parent="." instance=ExtResource( 6 )]
visible = false

[node name="NewGameMenu" parent="." instance=ExtResource( 7 )]
margin_left = 840.0
margin_top = 424.0
margin_right = 914.0
margin_bottom = 425.0

[connection signal="newGame" from="VBoxContainer" to="NewGameMenu" method="onNewgame"]
[connection signal="mouse_entered" from="VBoxContainer/newgameButton" to="VBoxContainer" method="buttonHover"]
[connection signal="pressed" from="VBoxContainer/newgameButton" to="VBoxContainer" method="_on_newgameButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/optionsButton" to="VBoxContainer" method="buttonHover"]
[connection signal="pressed" from="VBoxContainer/optionsButton" to="VBoxContainer" method="_on_optionsButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/addonsButton" to="VBoxContainer" method="buttonHover"]
[connection signal="pressed" from="VBoxContainer/addonsButton" to="VBoxContainer" method="_on_addonsButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/exitButton" to="VBoxContainer" method="buttonHover"]
[connection signal="pressed" from="VBoxContainer/exitButton" to="VBoxContainer" method="_on_exitButton_pressed"]
